deployments/envoy/envoy-b.yaml
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: listener_b
      address:
        socket_address: { address: 0.0.0.0, port_value: 10001 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_b
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend_b
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: backend_b }
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: backend_b
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: backend_b
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: backend-b, port_value: 9000 }
      health_checks:
        - timeout: 1s
          interval: 2s
          unhealthy_threshold: 3
          healthy_threshold: 1
          http_health_check:
            path: "/healthz"
